added new section as subjects

--- a/index.html
+++ b/index.html
@@ -19,24 +19,30 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark ">
         <a class="navbar-brand" href="#">Notes</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse ml-auto" id="navbarNavDropdown">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#download">Core Subject</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#download-sub">Sub Stream</a>
-            </li>
-            
-          </ul>
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#Subject">Subjects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#download">Core Subject</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#download-sub">Sub Stream</a>
+                </li>
+
+            </ul>
         </div>
-      </nav>
+    </nav>
+
+
 
 
     <section class="container-fluid main " id="main">
@@ -54,7 +60,45 @@
 
         </div>
     </section>
+    <!--subject in bca-->
+    <section class="main-sub" id="Subject">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6">
+                    <h2> BCA SUBJECTS FOR SEM-5</h2>
+                    <ul>
+                        <li>U20CSP311- PROGRAMING IN ASP.NET</li>
+                        <li>U20CSP3L5- PROGRAMING IN ASP.NET LAB</li>
+                        <li>U20CSP315- PROGRAMING IN PYTHON</li>
+                        <li>U20CSP3L6- PROGRAMING IN PYTHON LAB</li>
+                        <li>U20CSP320-SOFTWARE TESTING</li>
+                        <li>U20BBP407- RETAIL MARKETING</li>
+                        <li>U20BBP408- SALESMANSHIP AND ADVERTISING</li>
+                        <li>U20BCP312-TALLY FOR ACCOUNTING | U20MAP351-ALLIED STATISTICS | U20BBP303-MANAGERIAL
+                            COMMUNICATION</li>
+                    </ul>
+                    <p>TOTALLY 8 SUBJECT PAPERS INCLUSIVE OF (3 CORE PAPER + 2 LAB PAPER+ ONE SUB-STREAM +TWO SBE)</p>
+                </div>
+                <div class="col-sm-6">
+                    <h2> BCA DATA ANALYTICS SUBJECTS FOR SEM-5</h2>
+                    <ul>
+                        <li>U20CSP311- PROGRAMING IN ASP.NET</li>
+                        <li>U20CSP3L5- PROGRAMING IN ASP.NET LAB</li>
+                        <li>U20CSP310-SOFTWARE ENGINEERING</li>
+                        <li>U20CSP333-DATA MINING AND DATA WAREHOUSING</li>
+                        <li>U20CSP339-NATURAL LEARNING PROCESSING</li>
+                        <li>U20CSP340-DEEP LEARNING</li>
+                        <li>U20BBP407- RETAIL MARKETING</li>
+                        <li>U20BBP408- SALESMANSHIP AND ADVERTISING</li>
+                        <li>U20BCP312-TALLY FOR ACCOUNTING |U20MAP351-ALLIED STATISTICS 1 | U20BBP303-MANAGERIAL COMMUNICATION </li>
+                    </ul>
+                    <p>TOTALLY 9 SUBJECT PAPERS INCLUSIVE OF (3 CORE PAPER +2 ISDC PAPERS+ 1 LAB-PAPER+ ONE SUB-STREAM +TWO SBE)</p>
 
+
+                </div>
+            </div>
+        </div>
+    </section>
     <!--download section-->
 
     <section class="download" id="download">
@@ -93,7 +137,7 @@
 
     </section>
 
-    <section  class="download">
+    <section class="download">
         <div class="container-fluid ">
             <div class="row">
                 <div class="col-sm-4 download">
@@ -123,7 +167,7 @@
     </section>
 
 
-    <section  class="download-sub" id="download-sub">
+    <section class="download-sub" id="download-sub">
         <h1>Sub Stream Subject</h1>
 
         <div class="container-fluid ">
@@ -155,7 +199,7 @@
     </section>
     <!--Footer-->
     <footer>
-    <div class="footer-content">
+        <div class="footer-content">
             <h2>
                 Thank you for visiting our website.
             </h2>
