--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <a class="nav-link" href="#main">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#Subject">Subjects</a>
+                    <a class="nav-link" href="#Subject">Subject</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#download">Core Subject</a>
