Added new subject in sub stream

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     at Bharath
                     University by
                     students.</p>
-                    <p>For Allied Statistics and Tally For Accounting refer your notes taken in class.</p>
+                    <p>For Allied Statistics refer your notes taken in class.</p>
 
             </div>
 
@@ -211,23 +211,30 @@
 
         <div class="container-fluid ">
             <div class="row">
-                <div class="col-sm-4 ">
+                <div class="col-sm-3 ">
                     <img src="img/asp.png" class="subject-img">
                     <h4>RETAIL MARKETING (SEB)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-3 ">
                     <img src="img/asp.png" class="subject-img">
                     <h4>SALESMANSHIP AND ADVERTISING (SEB)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
-                <div class="col-sm-4 ">
+                <div class="col-sm-3 ">
                     <img src="img/asp.png" class="subject-img">
                     <h4>MANAGERIAL COMMUNICATION</h4>
+                    <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
+                        role="button" aria-pressed="true">Download</a>
+
+                </div>
+                <div class="col-sm-3 ">
+                    <img src="img/asp.png" class="subject-img">
+                    <h4>TALLY FOR ACCOUNTING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
