add images for subjects

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="row">
 
                 <div class="col-sm-3 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/c_asp (1).png" class="subject-img">
                     <h4>ASP.NET</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg  active"
                         role="button" aria-pressed="true">Download</a>
@@ -131,14 +131,14 @@
 
                 </div>
                 <div class="col-sm-3 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/software-testing.jpeg" class="subject-img">
                     <h4>SOFTWARE TESTING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-3 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/software-engineering.jpg" class="subject-img">
                     <h4>SOFTWARE ENGINEERING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
@@ -156,21 +156,21 @@
         <div class="container-fluid ">
             <div class="row">
                 <div class="col-sm-4 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/data-mini.jpeg" class="subject-img">
                     <h4>DATA MINING AND DATA WAREHOUSING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-4 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/nlp-natural-language-processing-cognitive-computing-technology-concept-virtual-screen-robotic-hand-touching-digital-interface_127544-332 (1).jpg" class="subject-img">
                     <h4>NATURAL LEARNING PROCESSING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-4 download">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/deep-learning.jpeg" class="subject-img">
                     <h4>DEEP LEARNING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
@@ -187,14 +187,14 @@
     <div class="container-fluid ">
         <div class="row">
             <div class="col-sm-6 ">
-                <img src="img/asp.png" class="subject-img">
+                <img src="img/c_asp (1).png" class="subject-img">
                 <h4>PROGRAMING IN ASP.NET LAB</h4>
                 <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn btn-lg active"
                     role="button" aria-pressed="true">Download</a>
 
             </div>
             <div class="col-sm-6 ">
-                <img src="img/asp.png" class="subject-img">
+                <img src="img/python.png" class="subject-img">
                 <h4>PROGRAMING IN PYTHON LAB</h4>
                 <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                     role="button" aria-pressed="true">Download</a>
@@ -212,28 +212,28 @@
         <div class="container-fluid ">
             <div class="row">
                 <div class="col-sm-3 ">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/RETAIL-MARKETING.png" class="subject-img">
                     <h4>RETAIL MARKETING (SEB)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-3 ">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/SALESMANSHIP AND ADVERTISING .jpeg" class="subject-img">
                     <h4>SALESMANSHIP AND ADVERTISING (SEB)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-3 ">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/managerial-communication.jpeg" class="subject-img">
                     <h4>MANAGERIAL COMMUNICATION</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-3 ">
-                    <img src="img/asp.png" class="subject-img">
+                    <img src="img/tally.png" class="subject-img">
                     <h4>TALLY FOR ACCOUNTING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
