--- a/index.html
+++ b/index.html
@@ -212,14 +212,14 @@
             <div class="row">
                 <div class="col-sm-3 ">
                     <img src="img/RETAIL-MARKETING.png" class="subject-img">
-                    <h4>RETAIL MARKETING (SEB)</h4>
+                    <h4>RETAIL MARKETING (SBE)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
                 </div>
                 <div class="col-sm-3 ">
                     <img src="img/SALESMANSHIP AND ADVERTISING .jpeg" class="subject-img">
-                    <h4>SALESMANSHIP AND ADVERTISING (SEB)</h4>
+                    <h4>SALESMANSHIP AND ADVERTISING (SBE)</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
