--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <li>U20CSP3L5- PROGRAMING IN ASP.NET LAB</li>
                         <li>U20CSP310-SOFTWARE ENGINEERING</li>
                         <li>U20CSP333-DATA MINING AND DATA WAREHOUSING</li>
-                        <li>U20CSP339-NATURAL LEARNING PROCESSING</li>
+                        <li>U20CSP339-NATURAL LANGUAGE PROCESSING</li>
                         <li>U20CSP340-DEEP LEARNING</li>
                         <li>U20BBP407- RETAIL MARKETING  (SEB)</li>
                         <li>U20BBP408- SALESMANSHIP AND ADVERTISING  (SEB)</li>
@@ -163,7 +163,7 @@
                 </div>
                 <div class="col-sm-4 download">
                     <img src="img/nlp-natural-language-processing-cognitive-computing-technology-concept-virtual-screen-robotic-hand-touching-digital-interface_127544-332 (1).jpg" class="subject-img">
-                    <h4>NATURAL LEARNING PROCESSING</h4>
+                    <h4>NATURAL LANGUAGE PROCESSING</h4>
                     <a href="https://getbootstrap.com/docs/4.0/components/buttons/" class="btn  btn-lg active"
                         role="button" aria-pressed="true">Download</a>
 
